internal/static/css/twtxt.css
article p img {
    display: block;
}

article hgroup h3 {
    margin-left: 60px;
}

article hgroup footer {
    margin-left: 60px;
}

.invisible {
    visibility:hidden;
    width:0;
    height:0;
}

#uploadForm {
    display: inline;
}

#uploadForm label {
    display: inline;
}

#uploadMedia {
    margin: 0;
    padding: 0;
}

